[B]0.9.15[/B]
LEIA - Global Search 8 now skinned
Add widget categories text option (wider categories widget)
Change premiered to year for movies
Rearrange info line so duration is next to end time
Add new sets icon (thanks braz!)

[B]0.9.14[/B]
LEIA - add extrathumbs to images in info dialog
LEIA - fix for duration
Fix bug in postplay nextup showing same thumb
Add play icon to videoinfo extras
No scroll on one page
Fix for mouse on big posters

[B]0.9.13[/B]
Fixes for plot overlay in extended info actor
Update rottentomatoes to fit new RT brand identity
Touchup tmdb icon
Add studio logo to videoinfo
Fix for images/extras showing in plugins
Prefer fanart for landscape widgets toggle
Fix for title length
Change to shadow for volumebar

[B]0.9.12[/B]
LEIA - Fix for scrollbars
LEIA - DialogAddonSettings
LEIA - Change fanart to Leia version
Watched Indicators update
Rearrange skin settings
Add support for Artwork Beef
Add download all option
Add nextaired details

[B]0.9.11[/B]
Add support for AEL metadata
Show seekjump position
Hide content for plotoverlay
Skin Settings > Miscellaneous > Enable / disable ratings
Switch indicators to white for focused

[B]0.9.10[/B]
Hopeful fix for widgets bug
Characterart plus Awards on info
Add slideshow ability in videoinfo
Use plot outline option

[B]0.9.9[/B]
Add FPS icon and indicator on videoosd info
Add trailer/extras fake fullscreen from info

[B]0.9.8[/B]
Fix NextUp in info bug
Add all views for AEL
Add "Extras" in video info for Extras folder


[B]0.9.7[/B]
Fix resolution flags not showing
Fix some alignment issues in dialogvideoinfo
Rearrange widget groups for Default Widgets to get people using library over skin helper
Add image gallery in videoinfo for extrafanart

[B]0.9.6[/B]
Many optimisations of skin code
Viewmode disabler
Add option to disable text in wall views
Fix flickering widget bug
Show fanart press up from viewmode menu

[B]0.9.5[/B]
Close osd after subs download.