@@ -15,20 +15,12 @@
             <visible>!Player.Seeking</visible>
             <visible>Player.HasMedia</visible>
         </control>
-        <control type="progress" id="401">
-            <width>100%</width>
-            <height>12</height>
-            <bottom>70</bottom>
-            <visible>Player.HasMedia</visible>
-            <visible>Player.Seeking</visible>
-        </control>
         <control type="progress" id="499">
             <width>100%</width>
             <height>12</height>
             <bottom>70</bottom>
             <info>Player.Progress</info>
             <visible>Player.HasMedia</visible>
-            <visible>!Player.Seeking</visible>
         </control>
         <control type="progress">
             <description>Progressbar</description>
@@ -43,6 +35,17 @@
             <include content="Defs_Progress_Colorfade">
                 <param name="id" value="499" />
             </include>
+        </control>
+        <control type="progress" id="401">
+            <width>100%</width>
+            <height>12</height>
+            <bottom>70</bottom>
+            <visible>Player.HasMedia</visible>
+            <visible>Player.Seeking</visible>
+            <texturebg colordiffuse="00ffffff" border="4">diffuse/progress-bg.png</texturebg>
+            <lefttexture colordiffuse="00ffffff" border="4">diffuse/progress-left.png</lefttexture>
+            <midtexture colordiffuse="00ffffff" border="4" diffuse="progress/diffuse.png">diffuse/progress-end.png</midtexture>
+            <righttexture colordiffuse="panel_fg_100" border="4" diffuse="progress/diffuse-end.png">diffuse/progress-nib.png</righttexture>
         </control>
     </include>
 
