@@ -1,3 +1,6 @@
+[B]0.9.16[/B]
+Change seekbar seeking to a white nib
+
 [B]0.9.15[/B]
 LEIA - Global Search 8 now skinned
 Add widget categories text option (wider categories widget)
